# insanely-fast-whisper-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml
extra/: insanely-fast-whisper.py  install-gfx1010.sh
insanely_fast_whisper_cli/: main.py
